<resources>
    <string name="app_name">AlfredPosClient</string>
    <string name="printer_app_name">AlfredRemotePrintService</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_page_info">The Way of Restaurants\nOutght to be Run</string>
    <string name="set_up">Setup</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="sync">Sync   </string>
    <string name="user_id_style">Employee ID</string>
    <string name="user_id">Employee ID</string>
    <string name="password">Password</string>
    <string name="biz_id_style">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Biz ID</string>
    <string name="biz_id">Biz ID</string>
    <string name="select_revenue_centre_info1">Select One of Revenue Centre to Sync</string>
    <string name="select_revenue_centre_info2">Sync will be taking around 1 minute</string>
    <string name="sync_complete">Sync Completes\nThe POS is ready for Dining Room 1\n\nPlease login POS with a\ncashier account</string>
    <string name="resync">Resync</string>
    <string name="cashier_login_tips1">Enter Cashier Employee ID</string>
    <string name="cashier_login_tips2">Enter Cashier Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sync_tips">This device is not yet initialized with your restaurant data at Alfred\ncloud.Please provide the following account information to sync\nwith Alfred cloud</string>
    <string name="category_select">select</string>
    <string name="enter_employee_id">Enter Employee ID</string>
    <string name="open_rest_tips">Before open restaurant,please make sure all devices are connected tothis device.</string>
    <string name="version">Version:</string>
    <string name="warning">Warning</string>
    <string name="server">Server</string>
    <string name="loading">Loading</string>
    <string name="exit_program">Please click BACK again to exit</string>
    <string name="drop_session_open">Drop session\nto start</string>
    <string name="drop_session_close">Drop back\nto close</string>
    <string name="manually_update">Not receive data update message.\nDo you need manually update data from backoffice?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="main_category">Main Category</string>
    <string-array name="week_array">
        <item></item>
        <item>Sun</item>
        <item>Mon</item>
        <item>Tues</item>
        <item>Wed</item>
        <item>Thur</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="day_symbol">th</string>
    <string name="waiter">WAITER</string>
    <string name="get_bill">GET BILL</string>
    <string name="alfred">ALFRED</string>
    <string name="number">0</string>
    <string name="print_bill">Print</string>
    <string name="colse_bill">Close</string>
    <string name="transfer_table">Transfer\nTable</string>
    <string name="hold_bill">Hold\nBill</string>
    <string name="kiosk_hold">Kiosk and Hold</string>
    <string name="open_item">Open\nitem</string>
    <string name="edit_kot">Edit\nkot</string>
    <string name="take_away">Take\naway</string>
    <string name="open_drawer">Open\nDrawer</string>
    <string name="instruction">Instruction</string>
    <string name="remove">Remove</string>
    <string name="void_">Void</string>
    <string name="free">Free</string>
    <string name="take_away_">Takeaway</string>
    <string name="app_delivery">Delivery</string>
    <string name="app_take_away">Take Away</string>
    <string name="app_dine_in">Dine In</string>
    <string name="transfer">Transfer</string>
    <string name="weight">Weight</string>
    <string name="weight_">Weight(KG)</string>
    <string name="pax">Pax:</string>
    <string name="order_id">Order ID:</string>
    <string name="order_no_">Order No.:</string>
    <string name="discount">Discount</string>
    <string name="unseat">Unseat</string>
    <string name="bill">Bill</string>
    <string name="table">Table</string>
    <string name="misc">Misc</string>
    <string name="delete_order">Delete</string>
    <string name="bill_summary">Bill Summary</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="total_bill"> Total Bill:</string>
    <string name="sub_total_"> Sub Total:</string>
    <string name="settled"> Settled:</string>
    <string name="change"> Change:</string>
    <string name="item_count">Item Count</string>
    <string name="discount_">Discount:</string>
    <string name="taxes_">Taxes:</string>
    <string name="cash">Cash</string>
    <string name="media">Media</string>
    <string name="adjustment">Adjustment</string>
    <string name="voucher">Voucher</string>
    <string name="guest_name">Guest Name</string>
    <string name="guest_phone_number">Guest Phone Number</string>
    <string name="leaue_comments">Leave Comments</string>
    <string name="total_due"> Total Due</string>
    <string name="rounding">Rounding</string>
    <string name="sub_total_bill">Sub Total:</string>
    <string name="cash_other">Others</string>
    <string name="exact">Exact $</string>
    <string name="settlement_void">VOID</string>
    <string name="void_all">Void all</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="qty">Qty</string>
    <string name="subtotal">Subtotal</string>
    <string name="disc">Disc</string>
    <string name="total">Total</string>
    <string name="item">Item</string>
    <string name="sub_total">Sub Total</string>
    <string name="taxes">Taxes</string>
    <string name="grand_total">Grand Total</string>
    <string name="sent_to_kitchen">All items ordered have been sent to kitchen</string>
    <string name="remove_item">Remove this item?</string>
    <string name="item_complete">this item has complete</string>
    <string name="sure_take_away">Are you sure take away?</string>
    <string name="no_order_detail">Cannot place the empty order.</string>
    <string name="network_connected">Internet connection not available. Please connect for cloud sync..</string>
    <string name="setting">Setting</string>
    <string name="edit">Edit</string>
    <string name="report">Report</string>
    <string name="system">System</string>
    <string name="reprint_bill">Reprint Bill</string>
    <string name="edit_settlement">Edit Settlement</string>
    <string name="boh_settlement">BOH Settlement</string>
    <string name="stored_card">Stored-Card</string>
    <string name="top_up">Top-up</string>
    <string name="binding">Binding</string>
    <string name="card_loss">Report Lost</string>
    <string name="change_card">Change Card</string>
    <string name="fill_card">Fill card</string>
    <string name="scanner">Please scan the stored-card QRcode</string>
    <string name="dashboard">Dashboard</string>
    <string name="day_sales">Day Sales</string>
    <string name="ent_plu">ENT PLU</string>
    <string name="void_plu">Void PLU</string>
    <string name="clock_inout">Clock\nIN/OUT</string>
    <string name="cash_inout">Cash\nIN/OUT</string>
    <string name="devices">Devices</string>
    <string name="close">Close</string>
    <string name="sunmi_screen">SUNMI Vice Screen</string>
    <string name="kot_print">KOT Print</string>
    <string name="of_pax">No. of Pax</string>
    <string name="kot_print_together">KOT Print Together</string>
    <string name="double_kot_print">Double KOT Print</string>
    <string name="double_bill_prints">Double Bill Prints</string>
    <string name="double_close_bill_prints">Double Close Bill Prints</string>
    <string name="print_order_summary">Print Order Summary</string>
    <string name="sync_data">Sync Data</string>
    <string name="update_msg">Please Update Message</string>
    <string name="receive">Receive</string>
    <string name="_message">Message</string>
    <string name="update_successful">Update is successful</string>
    <string name="no_update">No update</string>
    <string name="no_sync_date">Data cannot be synced when a session opens</string>
    <string name="change_employee_password">Change Employee Password</string>
    <string name="print_report_when_session">X Report</string>
    <string name="print_cash_close">Cash W Close Print</string>
    <string name="print_before_close_bill">Print Check</string>
    <string name="print_bill_set">Print Bill</string>
    <string name="print_lable">Print Label</string>
    <string name="print_direction">Print Label Direction</string>
    <string name="credit_card_rounding">Credit Card Rounding</string>
    <string name="print_preparation_instructions">Print Preparation Instructions</string>
    <string name="waiter_print_bill_once">Waiter Print Bill Once</string>
    <string name="include_plu_void">Include Plu Void</string>
    <string name="password_update_successfully">Password update successfully.</string>
    <string name="employee_no_exist">The employee does not exist at backoffice.</string>
    <string name="color_picker_tip">Tip: Touch the color ring or color bar to select a color value</string>
    <string name="color_select">Selection of color</string>
    <string name="binding_to_already">The revenue center has an another POS device attached. In order to use current device, please deattach existing device in Alfred Cloud BackOffice and try again.</string>
    <string name="be_bound_already">The device was attached to another revenue center. Please deattach it in Alfred Cloud BackOffice and try again.</string>
    <string name="sync_date_warning_tips">The revenue center setting is not complete. Please check the followings at Aflred Backoffice:</string>
    <string name="users">Users</string>
    <string name="tables">Tables</string>
    <string name="printers">Printers</string>
    <string name="printer_printergroup">Printer or PrinterGroup</string>
    <string name="item_">Item</string>
    <string name="product_categories">Product Categories</string>
    <string name="login_info_error">Employee ID, Password and Biz ID cannot be empty</string>
    <string name="login_required">Only Cashier or Manager can login!</string>
    <string name="invalid_employee">Invalid employee!</string>
    <string name="session_time_out">The current Session is running over 12 hours !</string>
    <string name="save_print_sales">Saving and Printing Sales</string>
    <string name="whether_close_restaurant">Are you sure to close restaurant to stop service today?</string>
    <string name="open_restaurant">Open Restaurant</string>
    <string name="open_restaurant_label">Open</string>
    <string name="close_restaurant_label">Close</string>
    <string name="operation_on">Operation on</string>
    <string name="is_going_to_start">is going to start!</string>
    <string name="bill_not_closed">There are some bills not closed yet.</string>
    <string name="amount_auth_by">Amount Auth by</string>
    <string name="due_days">Due Days</string>
    <string name="bill_date">Bill Date</string>
    <string name="active_five_hours">Active 5hours</string>
    <string name="switch_user">Switch User</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="table_name">Table name</string>
    <string name="event_voucher">Event Voucher</string>
    <string name="voucher_ten">$10 Voucher</string>
    <string name="voucher_five">$5 Voucher</string>
    <string name="online_order_no">Order No</string>
</resources>