<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_bill_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:text="@string/bill_number"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_amount_auth_by"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:text="@string/amount_auth_by"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_due_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:text="@string/due_days"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_bill_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bill_date"
        android:textColor="@color/black"
        android:textSize="20dp" />
</LinearLayout>
