<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9A9A9"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_active_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/active_five_hours"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_m" />

    <TextView
        android:id="@+id/tv_switch_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/switch_user"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_m" />

    <TextView
        android:id="@+id/tv_lock_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/lock_screen"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_m" />
</LinearLayout>