<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id_style"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_b"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:hint="@string/user_id"
                android:minEms="15"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_s" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_b"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minEms="15"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_s" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biz_id_style"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_b"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_biz_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:hint="@string/biz_id"
                android:inputType="textPassword"
                android:minEms="15"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_s" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:minEms="6"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m" />
    </LinearLayout>

</RelativeLayout>