<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_voucher_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:background="@drawable/box_number_forbid"
        android:gravity="center"
        android:text="@string/voucher_five"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_s"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_voucher_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_weight="3"
        android:background="@drawable/box_number_selector"
        android:gravity="center"
        android:text="@string/event_voucher"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_s" />

    <TextView
        android:id="@+id/tv_voucher_10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@drawable/box_number_forbid"
        android:gravity="center"
        android:text="@string/voucher_ten"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_s"
        android:visibility="invisible" />


</LinearLayout>