<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="horizontal"
    android:paddingTop="@dimen/PX_10"
    android:paddingBottom="@dimen/PX_10"
    android:paddingLeft="@dimen/PX_10" >

    <TextView
        android:id="@+id/tv_bill_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/online_order_no"
        android:textColor="@color/black"
        android:textSize="@dimen/PX_20" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sub_total_"
        android:textColor="@color/black"
        android:textSize="@dimen/PX_20" />
    
    <TextView
        android:id="@+id/tv_place_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/table_name"
        android:textColor="@color/black"
        android:textSize="@dimen/PX_20" />

    <TextView
        android:id="@+id/tv_poeple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="收银员"
        android:textColor="@color/black"
        android:singleLine="true"
        android:textSize="@dimen/PX_20" />
    
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="时间"
        android:textColor="@color/black"
        android:singleLine="true"
        android:textSize="@dimen/PX_20" />

</LinearLayout>